--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap');
 
+@import "./default/index.scss";
+
 :root {
   --primary-color:#1E90FF;
   --color-0: #fafafa;
