--- a/src/components/Organism/WindowBox/WindowBox.module.scss
+++ b/src/components/Organism/WindowBox/WindowBox.module.scss
@@ -3,7 +3,10 @@
     max-width: 900px;
     margin: auto;
     padding: 20px;
-    border: 1px solid red;
     box-shadow: 0px 5px 10px var(--color-80);
-    border-bottom: 1px solid var(--color-0);
+    border: 1px solid var(--color-0);
+
+    h2 {
+        margin-bottom: 0.625rem;
+    }
 }
