--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap');
 
 :root {
-  --primary-color:#39FF14;
-  --color-0: #A4FF00;
-  --color-20: #00BFFF;
-  --color-80: #1E90FF;
+  --primary-color:#1E90FF;
+  --color-0: #fafafa;
+  --color-20: #39FF14;
+  --color-80: #00BFFF;
   --color-100: #2C003E;
+  
 
 
 }
@@ -20,7 +21,7 @@ body {
   font-family: "Handjet", sans-serif;
   max-width: 100vw;
   overflow-x: hidden;
-  color: var(--color-0);
+  color: var(--primary-color);
   background-color: var(--color-0);
 }
 
