debugs and alignment with current lessons

--- a/src/components/Molecules/Header/Header.module.scss
+++ b/src/components/Molecules/Header/Header.module.scss
@@ -8,6 +8,7 @@
     background-color: var(--color-100);
     box-shadow: 0px 5px 10px var(--color-80);
     border-bottom: 1px solid var(--color-0);
+    font-family: "Bungee Tint", sans-serif; 
 }
 
 
