--- a/src/components/Atoms/Button/Button.module.scss
+++ b/src/components/Atoms/Button/Button.module.scss
@@ -2,12 +2,14 @@
     padding:6px 8px;
     background-color: var(--color-0);
     color:var(--color-100);
-    border:none;
+    border: 1px solid var(--color-80);
+    border-radius: 0.3125rem;
     cursor: pointer;
     transition: all 0.35s ease;
 
     &:hover{
         background-color: var(--color-80);
+        box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
     }
     
     &:disabled {
