--- a/src/components/Molecules/InputBox/InputBox.module.scss
+++ b/src/components/Molecules/InputBox/InputBox.module.scss
@@ -1,10 +1,33 @@
 .main {
-    h3 {
-        margin-bottom: rem(5px, 16px); 
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1.5rem;
+
+        h3 {
+            margin-bottom: 0.3125rem; 
+            font-size: 1rem;
+            font-weight: bold;
+            color: var(--color-80);
+            text-transform: capitalize;
+        }
+        input {
+            padding: rem(5px, 16px) rem(10px, 16px); 
+            border: rem(1px, 16px) solid var(--color-20);
+            border-radius: rem(10px, 16px);
+            font-size: 1rem;
+            background-color: var(--color-0);
+            color: var(--color-80); 
+            transition: all 0.3s ease;
+    
+            &:focus {
+                outline: none; 
+                border-color: var(--primary-color); 
+                box-shadow: 0px 0px 5px var(--primary-color); 
+            }
+    
+            &:hover {
+                border-color: var(--primary-color); 
+            }
     }
-    input {
-        padding: rem(5px, 16px) rem(10px, 16px); 
-        border: rem(1px, 16px) solid var(--color-20);
-        border-radius: rem(10px, 16px);
-    }
+
 }
