--- a/src/components/Molecules/SelectBox/SelectBox.module.scss
+++ b/src/components/Molecules/SelectBox/SelectBox.module.scss
@@ -1,11 +1,28 @@
 .main {
     h3 {
         margin-bottom: 0.3125rem; 
+        font-size: 1rem; 
+        font-weight: bold;
+        color: var(--color-80);
+        text-transform: capitalize;
     }
     
     select {
         padding: 0.3125rem 0.625rem; 
         border: 0.0625rem solid var(--color-20); 
         border-radius: 0.625rem; 
+        background-color: var(--color-0);
+        color: var(--color-80);
+        font-size: 1rem;
+        
+        &:focus {
+            outline: none;
+            border-color: var(--primary-color); 
+            box-shadow: 0 0 5px var(--primary-color); 
+        }
+
+        &:hover {
+            border-color: var(--primary-color); 
+        }
     }
 };
