--- a/src/components/Organism/WindowBox/WindowBox.module.scss
+++ b/src/components/Organism/WindowBox/WindowBox.module.scss
@@ -5,8 +5,17 @@
     padding: 20px;
     box-shadow: 0px 5px 10px var(--color-80);
     border: 1px solid var(--color-0);
+    background-color: var(--color-20);
 
     h2 {
-        margin-bottom: 0.625rem;
+        font-family: "SUSE", sans-serif;
+        font-size: 1.75rem;
+        font-weight: 900;
+        color: var(--primary-color);
+        margin-bottom: 1rem;
+        text-transform: uppercase;
+        letter-spacing: 1px; 
+        padding-bottom: 0.5rem;
+        border-bottom: 2px solid var(--color-100);
     }
 }
