--- a/src/styles/default/_functions.scss
+++ b/src/styles/default/_functions.scss
@@ -2,10 +2,18 @@
 
 $em-base: 16px;
 
-@function rem($px) {
+// @function rem($px) {
+//   @if unitless($px) {
+//     $px: $px * 1px;
+//   }
+
+//   @return #{math.div($px, $em-base)}rem;
+// }
+
+@function rem($px, $base: 16px) {
   @if unitless($px) {
     $px: $px * 1px;
   }
 
-  @return #{math.div($px, $em-base)}rem;
+  @return #{math.div($px, $base)}rem;
 }
