--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,13 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Tint&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap');
 
-@import "./default/index.scss";
+@import "../styles/default/index.scss";
 
 :root {
-  --primary-color:#1E90FF;
-  --color-0: #fafafa;
-  --color-20: #39FF14;
-  --color-80: #00BFFF;
-  --color-100: #2C003E;
+  --primary-color:#890620;
+  --color-0: #ebd4cb;
+  --color-20: #da9f93;
+  --color-80: #b6465f;
+  --color-100: #2c0703;
   
 
 
@@ -20,7 +22,7 @@
 
 html,
 body {
-  font-family: "Handjet", sans-serif;
+  font-family: "Roboto", sans-serif;;
   max-width: 100vw;
   overflow-x: hidden;
   color: var(--primary-color);
