--- a/src/components/Atoms/Button/Button.module.scss
+++ b/src/components/Atoms/Button/Button.module.scss
@@ -6,6 +6,9 @@
     border-radius: 0.3125rem;
     cursor: pointer;
     transition: all 0.35s ease;
+    font-size: 1rem;
+    height: 40px; 
+    line-height: normal;
 
     &:hover{
         background-color: var(--color-80);
