--- a/src/components/Molecules/InputBox/InputBox.module.scss
+++ b/src/components/Molecules/InputBox/InputBox.module.scss
@@ -2,18 +2,22 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 1.5rem;
+    justify-content: center;
 
         h3 {
             margin-bottom: 0.3125rem; 
+            font-family: "SUSE", sans-serif;
             font-size: 1rem;
             font-weight: bold;
             color: var(--color-80);
             text-transform: capitalize;
         }
         input {
-            padding: rem(5px, 16px) rem(10px, 16px); 
-            border: rem(1px, 16px) solid var(--color-20);
+            width: 200px;
+            padding: 0.25rem 0.5rem; 
+            border: 0.0625rem solid var(--color-20);
             border-radius: rem(10px, 16px);
+            height: 40px;
             font-size: 1rem;
             background-color: var(--color-0);
             color: var(--color-80); 
