--- a/src/components/Molecules/SelectBox/SelectBox.module.scss
+++ b/src/components/Molecules/SelectBox/SelectBox.module.scss
@@ -1,6 +1,11 @@
 .main {
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+
     h3 {
         margin-bottom: 0.3125rem; 
+        font-family: "SUSE", sans-serif;
         font-size: 1rem; 
         font-weight: bold;
         color: var(--color-80);
@@ -8,12 +13,14 @@
     }
     
     select {
-        padding: 0.3125rem 0.625rem; 
+        width: 150px;
+        padding: 0.25rem 0.5rem;
         border: 0.0625rem solid var(--color-20); 
         border-radius: 0.625rem; 
         background-color: var(--color-0);
         color: var(--color-80);
         font-size: 1rem;
+        height: 40px;
         
         &:focus {
             outline: none;
