--- a/src/components/Molecules/SwitchBox/SwitchBox.module.scss
+++ b/src/components/Molecules/SwitchBox/SwitchBox.module.scss
@@ -1,5 +1,14 @@
 .main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
     h3 {
         margin-bottom: 0.3125rem;
+        font-family: "SUSE", sans-serif;
+        font-size: 1.15rem;
+        color: var(--color-80);
+        transition: color 0.3s ease-in-out;
     };
 }
+
