--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -8,6 +8,8 @@
  
    .container {
      display: flex;
+     align-items: center;
+     justify-content: space-between;
      gap: 20px;
      border-radius: 10px;
    }
