--- a/src/components/Molecules/Header/Header.module.scss
+++ b/src/components/Molecules/Header/Header.module.scss
@@ -1,4 +1,5 @@
 .main {
+    position: fixed;
     display: flex; 
     align-items: center;
     padding: 20px;
@@ -9,6 +10,7 @@
     box-shadow: 0px 5px 10px var(--color-80);
     border-bottom: 1px solid var(--color-0);
     font-family: "Bungee Tint", sans-serif; 
+    z-index: 20px;
 }
 
 
