--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -2,6 +2,33 @@
 
 .main {
   min-height: 100vh;
+
+  .hamburgerWindow {
+    width: 600px;
+    border: 1px solid var(--color-100);
+    height: calc(100% - 80px);
+    position: fixed;
+    right: -600px;
+    top: 80px;
+    transition: all 0.35s ease;
+    z-index: 20;
+    box-shadow: 5px 5px 5px var(--color-100);
+
+    .mask {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(73, 73, 73, 0.425);
+      opacity: 0;
+      transition: all 0.35s ease;
+      z-index: -10;
+      backdrop-filter: blur(10px);
+    }
+
+    &.active {
+      right: 0;
+    }
+  }
  
   .content {
    padding: 20px 0;
